--- a/pocket-planner/src/components/BrowseAttractions/BrowseAttractions.css
+++ b/pocket-planner/src/components/BrowseAttractions/BrowseAttractions.css
@@ -7,7 +7,3 @@
   align-items: center;
   padding: 20px; /* padding */
 }
-
-.browse-container{
-    padding-top: 45%;
-}
