--- a/pocket-planner/src/components/ItineraryWidget/ItineraryWidget.css
+++ b/pocket-planner/src/components/ItineraryWidget/ItineraryWidget.css
@@ -30,7 +30,3 @@ li {
     display: flex;
     justify-content: center;
 }
-
-.browse-container{
-    padding-top: 20%;
-}
